syntax = "proto3"; //proto3을 사용함

option java_multiple_files = true;
option java_package = "grpc.admin";
option java_outer_classname = "AdminProto";

// Service 정의
service SaveUser {
  rpc SaveUser (SaveUserInfoRequest) returns (SaveUserInfoResponse) {
  }
}

message SaveUserInfoRequest {
  // 숫자 == 필드 번호 (메시지를 직렬화하고 역직렬화할 때 필드를 식별하는 데 사용)
  string username = 1;
  string password = 2;
  string email = 3;
}

message SaveUserInfoResponse {
  string result = 1;
  string message = 2;
}